--- a/SalesWPFApp/appsettings.json
+++ b/SalesWPFApp/appsettings.json
@@ -3,7 +3,7 @@
     "FStoreDb": "Server=localhost;Database=FStore;User Id=sa;Password=12345;Trusted_Connection=True;TrustServerCertificate=True;"
   },
   "DefaultAccount": {
-    "Email": "admin@fstore.com",
-    "Password": "admin@@"
+    "Email": "ubro3@32mine.net",
+    "Password": "123123"
   }
 }
