--- a/SalesWPFApp.DAOs/SalesWPFApp.DAOs.csproj
+++ b/SalesWPFApp.DAOs/SalesWPFApp.DAOs.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>net7.0</TargetFramework>
@@ -7,7 +7,11 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\DataAccess\BusinessObject.csproj" />
+    <PackageReference Include="BCrypt.Net-Next" Version="4.0.3" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\DataAccess\SalesWPFApp.BusinessObjects.csproj" />
   </ItemGroup>
 
 </Project>
